@@ -1,6 +1,7 @@
 2009-07-15  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/controller.rb: controller action.
+	component controller.
 
 2009-07-14  TOKI Yoshinori  <toki@freedom.ne.jp>
 
